hot fix safari 15.4 css change by setting vertical-align: initial for *.a

--- a/static/main.css
+++ b/static/main.css
@@ -48,7 +48,7 @@ a:active {
 	text-decoration: none;
 	color: #777;
 	background-color: #d6d6d6;
-	vertical-align: top;
+	vertical-align: initial;
 }
 
 a:hover {
